# summarizer-server

./: Dockerfile  README.md  make_schema.py  pyproject.toml  test.ipynb
app/: container.py  main.py  settings.py
app/infrastructure/: base.py  feature_repository.py  now.py  redis_producer.py  user.py  user_repository.py  uuid.py  video_repository.py
app/interface/router/: __init__.py  auth.py  feature.py  user.py  video.py
